# new_admin_panel_sprint_3

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
app/: .dockerignore  Dockerfile  docker-entrypoint.sh  requirements.txt  uwsgi.ini  wait_for_db.py
app/config/: settings.py  urls.py
app/config/components/: auth_password_validators.py  database.py  installed_apps.py  middleware.py  templates.py
app/movies/: admin.py  jsonencoder.py  models.py  setup.cfg
app/movies/api/: urls.py
app/movies/api/v1/: urls.py  views.py
app/movies/locale/en/LC_MESSAGES/: django.po
app/movies/locale/ru/LC_MESSAGES/: django.po
app/movies/management/commands/: ensure_adminuser.py
app/movies/migrations/: 0001_initial.py
nginx/: nginx.conf
nginx/configs/: site.conf
postgres_to_es/: Dockerfile  README.md  pyproject.toml  requirements.txt
postgres_to_es /: docker-entrypoint.sh  pyproject.toml
postgres_to_es /etl/: app.py  es.py
postgres_to_es /etl/config/: loggers.py  settings.py
postgres_to_es /etl/database/: backoff_connection.py  pg_database.py
postgres_to_es /etl/processors/: enricher.py  extractor.py  loader.py  transformer.py
postgres_to_es/etl/: app.py  config.py  es.py
postgres_to_es/etl/config/: loggers.py  settings.py
postgres_to_es/etl/database/: backoff_connection.py  pg_database.py
postgres_to_es/etl/lib/: es_index_schema.py  loggers.py  schemas.py  sql_templates.py  storage.py
postgres_to_es/etl/processors/: enricher.py  extractor.py  loader.py  transformer.py
postgres_to_es/etl/tests/: state_test_redis.py
